# Projects

2022198_HarshKumar_mc-3/MatrixCalculator/: settings.gradle
2022198_HarshKumar_mc-3/MatrixCalculator/app/: build.gradle
2022198_HarshKumar_mc-3/MatrixCalculator/app/src/main/cpp/: CMakeLists.txt  MatrixCalculator.cpp
2022198_HarshKumar_mc-3/MatrixCalculator/gradle/wrapper/: gradle-wrapper.properties
2022198_HarshKumar_mc-3/wifilocationlogger/: settings.gradle
2022198_HarshKumar_mc-3/wifilocationlogger/app/: build.gradle
2022198_HarshKumar_mc-3/wifilocationlogger/app/src/main/: AndroidManifest.xml
2022198_HarshKumar_mc-3/wifilocationlogger/gradle/: libs.versions.toml
2022198_HarshKumar_mc-3/wifilocationlogger/gradle/wrapper/: gradle-wrapper.properties
EBay & Olx Clone/: DBMS.py  DBMS_Project.sql
FlightApp/: settings.gradle.kts
FlightApp/app/: build.gradle.kts
FlightApp/app/src/main/: AndroidManifest.xml
FlightApp/app/src/main/res/layout/: activity_main.xml  stop_item.xml
FlightApp/app/src/main/res/raw/: stops.txt
FlightApp/gradle/wrapper/: gradle-wrapper.properties
FlightAppCo/: settings.gradle.kts
FlightAppCo/app/: build.gradle.kts
FlightAppCo/app/src/main/: AndroidManifest.xml
FlightAppCo/app/src/main/res/raw/: stops.txt
FlightAppCo/app/src/main/res/values/: strings.xml  themes.xml
FlightAppCo/app/src/main/res/values-night/: themes.xml
FlightAppCo/gradle/: libs.versions.toml
FlightAppCo/gradle/wrapper/: gradle-wrapper.properties
Library Management System/ap1_2022198/: Readme.txt  pom.xml
(+25 files in other folders)
